--- a/src/main/resources/templates/school/create.html
+++ b/src/main/resources/templates/school/create.html
@@ -1,32 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>School Mgt System</title>
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Create School</title>
+    <link th:href="@{/css/index.css}" rel="stylesheet" type="text/css" />
+    <script th:src="@{/js/index.js}" type="text/js"></script>
 </head>
-<body>
-<h2>Create School</h2>
-<form th:action="@{register}" method="post">
 
-
-    <label>Name</label>
-    <input type="text" name="name"  />
-    <br><br>
-
-    <label>Address</label>
-    <input type="text" name="address"  />
-    <br><br>
-
-    <label>Number of Staff</label>
-    <input type="number" name="no_of_staff"  />
-    <br><br>
-
-    <input type="submit" name="Save"  />
-</form>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<body class="min-h-screen flex flex-col">
+    <header th:replace="~{fragments/header.html :: header}"></header>
+    <main class="flex-1 py-10 bg-slate-50">
+        <div class="custom-container">
+            <div class="mx-auto max-w-2xl text-center">
+                <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Create New School</h2>
+                <p class="mt-2 text-lg leading-8 text-gray-600">Add a new school to your list of records</p>
+            </div>
+            <form th:action="@{register}" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
+                <div class="space-y-6">
+                    <div>
+                        <label for="name" class="form-label">School
+                            Name</label>
+                        <div class="mt-2.5">
+                            <input type="text" name="name" id="name"
+                                   class="form-control">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="address" class="form-label">Address</label>
+                        <div class="mt-2.5">
+                            <input type="text" name="address" id="address"
+                                   class="form-control">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="no_of_staff" class="form-label">Number of
+                            Staffs</label>
+                        <div class="mt-2.5">
+                            <input type="number" name="no_of_staff" id="no_of_staff"
+                                   class="form-control">
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-10">
+                    <button type="submit"
+                            class="submit-btn">Create
+                        New School</button>
+                </div>
+            </form>
+        </div>
+    </main>
+    <footer th:replace="~{fragments/footer.html :: footer}"></footer>
 </body>
+
+
 </html>
