--- a/src/main/resources/templates/school/index.html
+++ b/src/main/resources/templates/school/index.html
@@ -1,26 +1,107 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>School Mgt System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/index.css}" rel="stylesheet" type="text/css" />
+    <script th:src="@{/js/index.js}" type="text/js"></script>
 
 </head>
-<body>
-<h1 th:text="${info}"></h1>
 
-<form th:action="@{/school/searchbyname}" method="get">
-
-    <input type="text" name="term" placeholder="Search..">
-    <button type="submit" class="btn btn-danger m-1" value="save">Search</button>
-
-</form>
-
-<a th:href="@{/school/create}" class="btn btn-primary">Create School</a>
-<a th:href="@{/school/list}" class="btn btn-info">List School</a>
-<a th:href="@{/school/list}" class="btn btn-info"> School by Page</a>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+<body class="min-h-screen flex flex-col">
+    <header th:replace="~{fragments/header.html :: header}"></header>
+    <main class="flex-1 py-24 sm:py-32 bg-white">
+        <div class="custom-container">
+            <div class="mx-auto max-w-2xl lg:text-center">
+                <h2 class="home-title">
+                    School Management System
+                    <h2 />
+                    <p class="mt-6 text-lg leading-8 text-gray-600">
+                        A management system designed to help customers keep track of schools
+                    </p>
+                    <a class="home-action-btn" th:href="@{/school/list}">
+                        <span>
+                            Check Out
+                        </span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor"
+                             class="w-3 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                        </svg>
+                    </a>
+            </div>
+            <div class="feature-list-container">
+                <dl class="feature-list">
+                    <div class="feature-item">
+                        <dt>
+                            <div
+                                 class="feature-icon">
+                                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                     stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
+                                </svg>
+                            </div>
+                            Manage School Data
+                        </dt>
+                        <dd>
+                            You can create, update and delete school data
+                        </dd>
+                    </div>
+                    <div class="feature-item">
+                        <dt>
+                            <div
+                                 class="feature-icon">
+                                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                     stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
+                                </svg>
+                            </div>
+                            Real-time Information
+                        </dt>
+                        <dd>Get real-time and up to date statistics about
+                            important metrics you need to know</dd>
+                    </div>
+                    <div class="feature-item">
+                        <dt>
+                            <div
+                                 class="feature-icon">
+                                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                     stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+                                </svg>
+                            </div>
+                            Data Protection
+                        </dt>
+                        <dd>
+                            We do not take the personal data of users using our application, you enjoy data privacy
+                        </dd>
+                    </div>
+                    <div class="feature-item">
+                        <dt>
+                            <div
+                                 class="feature-icon">
+                                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                     stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
+                                </svg>
+                            </div>
+                            User experience
+                        </dt>
+                        <dd>Experience great user experience as you use
+                            our application</dd>
+                    </div>
+                </dl>
+            </div>
+        </div>
+        </div>
+    </main>
+    <footer th:replace="~{fragments/footer.html :: footer}"></footer>
 </body>
+
 </html>
