--- a/src/main/resources/templates/school/search.html
+++ b/src/main/resources/templates/school/search.html
@@ -7,52 +7,49 @@
 <div class="mx-auto" style="width: 70%">
     <h2 class="m-2">Schools</h2>
     <a th:href="@{/school/create}" class="btn btn-primary m-1">Create</a>
+    <div>
     <div th:if="${hasContent}">
 
-        <form th:action="@{/school/deleteselected}" method="post">
 
             <table class="table table-striped ">
                 <thead class="table-dark p-2">
-                <tr><th>ID</th><th>Name</th><th>Address</th><th>no_of_staff</th><th>Actions</th></tr> </thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Address</th>
+                    <th>no_of_staff</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+
                 <tbody>
+
                 <tr th:each="school:${schools} " class="p-2" >
-                    <td>
-                        <input type="checkbox" name="selectedIds" th:value="${school.id}" />
-                    </td>
+
                     <td th:text="${school.id}"></td>
                     <td th:text="${school.name}"></td>
                     <td th:text="${school.address}"></td>
                     <td th:text="${school.no_of_staff}"></td>
                     <td><a th:href="@{/school/view(id=${school.id})}" class="btn btn-primary m-0.5">View</a>
                         <a th:href="@{/school/edit/{id}(id=${school.id})} " class="btn btn-primary m-0.5">Edit</a>
-                        <a th:href="@{/school/delete/{id}(id=${school.id})}" class="btn btn-danger m-0.5">Delete</a>
+                        <a th:href="@{/school/search/delete(id=${school.id},term=${term})}" class="btn btn-danger m-0.5">Delete</a>
                     </td>
                 </tbody>
                 </tr>
             </table>
-            <button type="submit" class="btn btn-danger m-1" value="save">Delete Selected</button>
 
-        </form>
 
-        <div th:if="${page_total > 1}">
-            <div>
-                <span>Page <span th:text="${page_num+1}"></span> of <span th:text="${page_total}"></span></span>
-            </div>
-            <div>
-                <a th:if="${page_num > 0}" th:href="@{/school/searchbyname(search=${term},page=${page_num-1}))}">Previous</a>
-                <a th:if="${page_num < (page_total - 1)}" th:href="@{/school/searchbyname( search=${term},page=${page_num + 1}))}">Next</a>
-            </div>
-        </div>
+
+
 
     </div>
-
     <div th:else>
 
         <p>NO SCHOOL AVAILABLE FOR </p>
         <p th:text="${term}"></p>
 
     </div>
-
+</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
 
