--- a/src/main/resources/templates/school/index.html
+++ b/src/main/resources/templates/school/index.html
@@ -78,7 +78,8 @@
                             Data Protection
                         </dt>
                         <dd>
-                            We do not take the personal data of users using our application, you enjoy data privacy
+                            We do not take the protection of your personal data with levity, you enjoy premium data
+                            privacy
                         </dd>
                     </div>
                     <div class="feature-item">
@@ -93,8 +94,7 @@
                             </div>
                             User experience
                         </dt>
-                        <dd>Experience great user experience as you use
-                            our application</dd>
+                        <dd>Get the best user experience as you navigate through the application</dd>
                     </div>
                 </dl>
             </div>
