--- a/src/main/resources/templates/school/listbypage.html
+++ b/src/main/resources/templates/school/listbypage.html
@@ -15,11 +15,11 @@
             <section class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="dashboard-card">
                     <h6 class="dashboard-title">Total Schools</h6>
-                    <p class="dashboard-stat">22000</p>
+                    <p class="dashboard-stat" th:text="${total_schools}"></p>
                 </div>
                 <div class="dashboard-card">
                     <h6 class="dashboard-title">Total Staffs</h6>
-                    <p class="dashboard-stat">250</p>
+                    <p class="dashboard-stat" th:text="${total_staffs}"></p>
                 </div>
             </section>
             <section class="mt-12 w-full">
@@ -32,8 +32,8 @@
                 <div
                      class="flex flex-wrap items-center justify-between bg-white py-3 px-2 border-b border-b-gray-400">
                     <div class="w-full p-2 md:w-auto">
-                        <div class="school-search-container">
-                            <input type="text" id="search" class="school-search" placeholder="Search here" />
+                        <form th:action="@{/school/list}" method="get" class="school-search-container">
+                            <input type="text" id="search" name="term" class="school-search" placeholder="Search here" />
                             <button class="search-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                      stroke-width="1.5" stroke="currentColor"
@@ -42,7 +42,7 @@
                                           d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                                 </svg>
                             </button>
-                        </div>
+                        </form>
                     </div>
                     <div class="w-full p-2 md:w-auto">
                         <a th:href="@{/school/create}"
